--- a/sass/style.scss
+++ b/sass/style.scss
@@ -80,3 +80,54 @@ h2 {
 .bold {
   font-weight: 700;
 }
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.navbar--logo {
+  width: 72px;
+}
+.navbar--list {
+  display: flex;
+  gap: 50px;
+  list-style: none;
+}
+
+.navbar--link {
+  text-decoration: none;
+  color: #e8ffff;
+  font-family: "Michroma", sans-serif;
+}
+.header--banner {
+  width: 100%;
+  max-height: 115px;
+  object-fit: cover;
+  display: block;
+}
+
+@media (min-width: 1024px) {
+  .header--banner {
+    max-height: 278px;
+  }
+}
+
+.featuredMovies {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  padding: 50px;
+}
+
+.featuredMovies--card__img {
+  height: 400px;
+}
+
+.featuredMovies--card__title {
+  font-family: "Michroma", sans-serif;
+  color: #e8ffff;
+  text-transform: uppercase;
+}
