--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,6 +48,13 @@ $light: #e8ffff;
 $turquoise: #83feff;
 $pink: #fd55b7;
 
+@mixin flex-center($gap: 0) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: $gap;
+}
+
 body {
   font-family: "Roboto-Regular", sans-serif;
   font-size: 20px;
@@ -58,6 +65,7 @@ h2 {
   font-size: 32px;
   color: $light;
 }
+
 h1 {
   font-family: "Michroma", sans-serif;
 }
@@ -77,10 +85,23 @@ h1 {
 
 /* --- navbar style: ---*/
 .navbar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
+  @include flex-center(2rem);
+  &--logo {
+    width: 72px;
+  }
+  &--list {
+    display: flex;
+    gap: 3rem;
+    list-style: none;
+  }
+  &--link {
+    text-decoration: none;
+    color: $light;
+    font-family: "Michroma", sans-serif;
+    &:hover {
+      color: $turquoise;
+    }
+  }
 }
 
 .navbar-pc {
@@ -95,33 +116,15 @@ h1 {
   @media screen and (min-width: 767px) {
     display: none;
   }
+  &--list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    list-style: none;
+  }
 }
 
-.navbar-mobile--list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 3rem;
-  list-style: none;
-}
-
-.navbar--logo {
-  width: 72px;
-}
-.navbar--list {
-  display: flex;
-  gap: 3rem;
-  list-style: none;
-}
-
-.navbar--link {
-  text-decoration: none;
-  color: $light;
-  font-family: "Michroma", sans-serif;
-}
-.navbar--link:hover {
-  color: $turquoise;
-}
 .header--banner {
   width: 100%;
   max-height: 10rem;
@@ -134,7 +137,10 @@ h1 {
 .container {
   width: auto;
   margin: 1rem;
+  padding: 1rem;
   @media screen and (min-width: 1024px) {
+    margin: auto;
+    width: 1080px;
   }
 }
 
@@ -142,6 +148,15 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  &--title {
+    font-family: "Michroma", sans-serif;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: $turquoise;
+    &__highlight {
+      color: $pink;
+    }
+  }
 }
 
 .hero-container {
@@ -151,16 +166,6 @@ h1 {
     justify-content: center;
     align-items: center;
   }
-}
-.hero--title {
-  font-family: "Michroma", sans-serif;
-  font-size: 40px;
-  text-transform: uppercase;
-  color: $turquoise;
-}
-
-.hero--title__highlight {
-  color: $pink;
 }
 
 /* --- equalizer style & animation --- */
@@ -226,14 +231,13 @@ h1 {
 
 .equalizer--bottom {
   transform: rotate(180deg);
-}
-
-.equalizer--bottom__bar {
-  width: 1rem;
-  height: 2rem;
-  background: $pink;
-  animation: bounce 1s infinite ease-out;
-  transform-origin: bottom;
+  &__bar {
+    width: 1rem;
+    height: 2rem;
+    background: $pink;
+    animation: bounce 1s infinite ease-out;
+    transform-origin: bottom;
+  }
 }
 
 @keyframes bounce {
@@ -263,11 +267,11 @@ h1 {
     width: 100vw;
     justify-content: center;
   }
+  &--card {
+    scroll-snap-align: center;
+  }
 }
 
-.featuredMovies--card {
-  scroll-snap-align: center;
-}
 .featuredMovies--card__img {
   height: 20rem;
 }
@@ -300,34 +304,29 @@ h1 {
 
 /*--- footer style ---*/
 
-.footer--banner {
-  width: 100%;
-  max-height: 20rem;
-  object-fit: cover;
-  display: block;
-  margin-top: 20px;
-}
-
 .footer {
   text-align: center;
   color: $turquoise;
-}
-
-.footer--link {
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-  margin-top: 15px;
-}
-.footer--link__decoration {
-  text-decoration: none;
-  color: $turquoise;
-}
-
-.footer--logo {
-  width: 32px;
-  @media screen and (min-width: 1024px) {
-    width: 48px;
+  &--banner {
+    width: 100%;
+    max-height: 20rem;
+    object-fit: cover;
+    display: block;
+    margin-top: 20px;
+  }
+  &--link {
+    @include flex-center(5px);
+    margin-top: 15px;
+    &__decoration {
+      text-decoration: none;
+      color: $turquoise;
+    }
+  }
+  &--logo {
+    width: 32px;
+    @media screen and (min-width: 1024px) {
+      width: 48px;
+    }
   }
 }
 
@@ -356,10 +355,12 @@ h1 {
 }
 
 .fiches {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
+  width: auto;
+
+  @media screen and (min-width: 1024px) {
+    margin: auto;
+    width: 1080px;
+  }
 }
 
 .fiches--title {
