--- a/sass/style.scss
+++ b/sass/style.scss
@@ -112,16 +112,110 @@ h1 {
   }
 }
 
-.navbar-mobile {
+#burger-menu {
+  cursor: pointer;
+  height: 27px;
+  width: 27px;
+  margin: 50px;
+  overflow: visible;
+  position: relative;
+  z-index: 2;
   @media screen and (min-width: 767px) {
     display: none;
   }
-  &--list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 3rem;
+
+  // Burger menu lines
+  span,
+  span:before,
+  span:after {
+    background: $turquoise;
+    display: block;
+    height: 2px;
+    opacity: 1;
+    position: absolute;
+    transition: 0.3s ease-in-out;
+  }
+
+  span:before,
+  span:after {
+    content: "";
+  }
+
+  span:before {
+    left: 0px;
+    top: -10px;
+    width: 27px;
+  }
+
+  span {
+    right: 0px;
+    top: 13px;
+    width: 27px;
+  }
+
+  span:after {
+    left: 0px;
+    top: 10px;
+    width: 27px;
+  }
+
+  // burger rotation on click
+  &.close {
+    span:before {
+      top: 0px;
+      transform: rotate(90deg);
+      width: 27px;
+    }
+
+    span {
+      transform: rotate(-45deg);
+      top: 13px;
+      width: 27px;
+    }
+
+    span:after {
+      top: 0px;
+      left: 0;
+      transform: rotate(90deg);
+      opacity: 0;
+      width: 0;
+    }
+  }
+}
+
+#navbar-mobile--menu {
+  z-index: 1;
+  min-width: 100%;
+  min-height: 100%;
+  position: fixed;
+  top: 0;
+  height: 0;
+  visibility: hidden;
+  opacity: 0;
+  text-align: center;
+  padding-top: 20px;
+  transition: all 0.3s ease-in-out;
+
+  &.overlay {
+    visibility: visible;
+    opacity: 1;
+    padding-top: 100px;
+    background: $dark;
+  }
+
+  li {
     list-style: none;
+  }
+
+  a {
+    color: $light;
+    display: block;
+    font-size: 32px;
+    margin-bottom: 30px;
+    text-decoration: none;
+  }
+  a:hover {
+    color: $turquoise;
   }
 }
 
@@ -387,4 +481,24 @@ h1 {
   @media screen and (min-width: 1024px) {
     font-size: 38px;
   }
+}
+
+.fiches progress {
+  background-color: none;
+  color: $turquoise;
+  border-radius: 8px;
+  margin: 1rem;
+}
+.fiches progress::-webkit-progress-bar {
+  background-color: none;
+  color: $turquoise;
+  border-radius: 8px;
+}
+
+.fiches progress::-webkit-progress-value {
+  background-color: turquoise;
+  border-radius: 8px;
+}
+.fiches progress.complet::-webkit-progress-value {
+  background-color: $pink;
 }
