--- a/sass/style.scss
+++ b/sass/style.scss
@@ -242,11 +242,15 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   &--title {
     font-family: "Michroma", sans-serif;
-    font-size: 40px;
+    font-size: 2rem;
     text-transform: uppercase;
     color: $turquoise;
+    @media screen and (min-width: 764px) {
+      font-size: 3rem;
+    }
     &__highlight {
       color: $pink;
     }
@@ -264,21 +268,22 @@ h1 {
 
 /* --- equalizer style & animation --- */
 .equalizer {
-  width: 40rem;
-  height: 20rem;
+  width: 40vw;
+  height: 25vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: auto;
 }
 .equalizer--top,
 .equalizer--bottom {
   display: flex;
-  gap: 1rem;
+  gap: 1vw;
 }
 .equalizer--top__bar {
-  width: 1rem;
-  height: 2rem;
+  width: 1vw;
+  height: 2vw;
   background: $turquoise;
   animation: bounce 1.5s infinite ease-out;
   transform-origin: bottom;
@@ -326,8 +331,8 @@ h1 {
 .equalizer--bottom {
   transform: rotate(180deg);
   &__bar {
-    width: 1rem;
-    height: 2rem;
+    width: 1vw;
+    height: 2vw;
     background: $pink;
     animation: bounce 1s infinite ease-out;
     transform-origin: bottom;
